--- a/UpMain.css
+++ b/UpMain.css
@@ -36,10 +36,12 @@ a{
 	position: fixed;
 	height: 100%;
 	width: 7%;
-	left: 0%;
+	left: -10%;
 	top: 0%;
 	background-color: #EAF943;
-
+}
+.activa{
+	left: 0%;
 }
 .barraNavegacion li{
 	list-style: none;
@@ -51,6 +53,19 @@ a{
 	font-size: 20px;
 	font-family: Whitelist-Demo;
 
+}
+.botonBarra{
+	position: fixed;
+	height: 9%;
+	width: 2%;
+	left: -1%;
+	top: 49%;
+	border-radius: 10px;
+	background-color: #7ebcfb;
+	cursor: pointer;
+}
+.activa2{
+	left: 6%;
 }
 .imagen1{
 	width: 38.7%;
@@ -92,12 +107,68 @@ a{
 	background-repeat: no-repeat;
 	border: solid white 5px ;
 }
+.imagenText1{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(234,249,67,0.4);
+	-webkit-transition:opacity 0.2s;
+	opacity: 0;
+	font-family: Whitelist-Demo;
+	text-align: center;
+	font-size: 20px;
+}
+.imagen1:hover .imagenText1{
+	opacity: 1;
+}
+.imagenText2{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(234,249,67,0.4);
+	-webkit-transition:opacity 0.2s;
+	opacity: 0;
+	font-family: Whitelist-Demo;
+	text-align: center;
+	font-size: 20px;
+}
+.imagen2:hover .imagenText2{
+	opacity: 1;
+}
+.imagenText3{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(234,249,67,0.4);
+	-webkit-transition:opacity 0.2s;
+	opacity: 0;
+	font-family: Whitelist-Demo;
+	text-align: center;
+	font-size: 20px;
+}
+.imagen3:hover .imagenText3{
+	opacity: 1;
+}
+.imagenText4{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(234,249,67,0.4);
+	-webkit-transition:opacity 0.2s;
+	opacity: 0;
+	font-family: Whitelist-Demo;
+	text-align: center;
+	font-size: 20px;
+}
+.imagen4:hover .imagenText4{
+	opacity: 1;
+}
 .Nuestra{
 	max-width: 71.5%;
 	margin-left: 12%;
 	margin-top: 65%;
 	border: solid white 5px;
-	padding: 0% 10% 0% 0%;
+	padding: 0% 10% 4.5% 0%;
 	text-align: center;
 	color: white;
 	font-family: Whitelist-Demo;
@@ -108,7 +179,7 @@ a{
 	margin-left: 12%;
 	margin-top: 10%;
 	border: solid white 5px;
-	padding: 0% 0% 0% 10%;
+	padding: 0% 0% 7.2% 10%;
 	text-align: center;
 	color: white;
 	font-family: Whitelist-Demo;
@@ -119,7 +190,7 @@ a{
 	margin-left: 12%;
 	margin-top: 10%;
 	border: solid white 5px;
-	padding: 0% 10% 0% 0%;
+	padding: 0% 10% 6.4% 0%;
 	text-align: center;
 	color: white;
 	font-family: Whitelist-Demo;
@@ -147,7 +218,7 @@ a{
 .contenedorColumnas{
 	display: table-cell;
 	background-color: white;
-	padding:2% 6%;
+	padding:3% 10% 3% 10%;
 	text-align: center;
 	border: solid black 5px;
 	font-family: Whitelist-Demo;
@@ -167,7 +238,7 @@ a{
 .foot{
 	margin-top: 10%;
 	max-width: 1920px;
-	margin-left: 6.5%;
+	margin-left: 0%;
 	width: 100%;
 	height: 100%;
 	padding: 10px;
@@ -182,6 +253,19 @@ a{
 }
 .inglés{
 	position: absolute;
-	top: 50%;
+	top: 35%;
 	right: 10%;
+}
+.formulario{
+	text-align: center;
+	margin-top: 15%;
+	margin-left: 4%;
+	border: solid white 5px;
+	color: white;
+	padding: 3%;
+}
+.audio{
+	position: absolute;
+	margin-left: 80%;
+	margin-top: 10%;
 }
