--- a/UpMain.css
+++ b/UpMain.css
@@ -273,3 +273,34 @@ a{
 	margin-left: 30%;
 	margin-top: 10%;
 }
+.titulo{
+	color: white;
+	margin-top: 20%;
+	margin-left: 40%;
+	font-size: 50px;
+	font-family: Whitelist-Demo;
+}
+.contenedorReceta{
+	display: flex;
+	margin-left: 10%;
+}
+.nombreReceta{
+	background-color: white;
+	width: 320px;
+	height: auto;
+	padding: 3%;
+	text-align: center;
+	border-right: 20px black solid;
+	border-left: 20px black solid;
+}
+.contenido{
+	color: white;
+	background-color: black;
+	list-style: none;
+	width: 310px;
+	height: auto;
+	padding: 2%;
+	text-align: center;
+	margin-left: 20px;
+	border: solid white 8px; 
+}
